release 1.18

release 1.17 (01-2013)
- Fixed issue JERSEY-1642
  http://java.net/jira/browse/JERSEY-1642
  ResponseListener#onError is never invoked
- Fixed issue JERSEY-1641
  http://java.net/jira/browse/JERSEY-1641
  Accepted contribution by Arul Dhesiaseelan - Simple Server version update (4.1.20 -> 5.0.4)
- Fixed issue JERSEY-1618
  http://java.net/jira/browse/JERSEY-1618
  Incorrect ResourceConfig initialization"

release 1.16 (12-2012)
- Fixed issue JERSEY-1601
  http://java.net/jira/browse/JERSEY-1601
  Avoid String type to store plain passwords when using HTTPBasicAuthFilter and HTTPDigestAuthFilter
- Fixed issue
  OPTIONS call to a webservice method with a "/" in path does not return method element
- Fixed issue JERSEY-1459
  http://java.net/jira/browse/JERSEY-1459
  Unmarshalling error when parsing a JSON message generated from Jira 5.1.x

release 1.15 (10-2012)
- Fixed issue JERSEY-1441
  http://java.net/jira/browse/JERSEY-1441
  Jersey bookstore sample test cases need reactivation
- Fixed issue JERSEY-1440
  http://java.net/jira/browse/JERSEY-1440
  Dead links found in sample READMEs + JERSEY-1440: Dead links found in sample READMEs
- Fixed issue JERSEY-1409
  http://java.net/jira/browse/JERSEY-1409
  Enabled InputStream parameter to be set on a WADL generator by relaxing parameter type check
- Fixed issue JERSEY-1436
  http://java.net/jira/browse/JERSEY-1436
  storage-service example: README clarification
- Fixed issue JERSEY-1433
  http://java.net/jira/browse/JERSEY-1433
  Incorrect implementation of default servlet (Grizzly 2)
- Fixed issue JERSEY-1448
  http://java.net/jira/browse/JERSEY-1448
  Multipart.BodyPart only allowing headers that start with Content-*
- Fixed issue JERSEY-1438
  http://java.net/jira/browse/JERSEY-1438
  Actual WADL generator type classloader should be used when creating JAXBContext for WADL generation
- Fixed issue JERSEY-769
  http://java.net/jira/browse/JERSEY-769